--- a/src/main/resources/templates/fragments/otherreports/abogadosreport.html
+++ b/src/main/resources/templates/fragments/otherreports/abogadosreport.html
@@ -39,7 +39,10 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                         </div>
                     </div>
                      <div class="form-group">    
-                         <td><a class="btn btn-default" id="generar">Generar</a></td>
+                         <td><a class="btn btn-default" id="generar">pdf</a></td>
+                    </div>
+                     <div class="form-group">    
+                         <td><a class="btn btn-default" id="excel">excel</a></td>
                     </div>
                 </form>
             </div>
@@ -60,6 +63,11 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
         });
         $('#generar').click(function(){
             $("#formreport").attr('action', '../abogados/1');
+            $("form#formreport").submit();
+            
+        });
+        $('#excel').click(function(){
+            $("#formreport").attr('action', '../abogadosxls');
             $("form#formreport").submit();
             
         });
