--- a/src/main/resources/templates/fragments/otherreports/motoristasreport.html
+++ b/src/main/resources/templates/fragments/otherreports/motoristasreport.html
@@ -40,6 +40,9 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                      <div class="form-group">    
                          <td><a class="btn btn-default" id="generar">Generar</a></td>
                     </div>
+ <div class="form-group">    
+                         <td><a class="btn btn-default" id="excel">excel</a></td>
+                    </div>
                 </form>
             </div>
         </div>
@@ -59,6 +62,11 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
         });
         $('#generar').click(function(){
             $("#formreport").attr('action', '../motoristas/1');
+            $("form#formreport").submit();
+            
+        });
+                $('#excel').click(function(){
+            $("#formreport").attr('action', '../motoristasxls');
             $("form#formreport").submit();
             
         });
