--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_capacitaciones.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_capacitaciones.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="3efb06ae-db0d-441a-8882-24e35fcd8a5a">
 	<property name="ireport.zoom" value="0.909090909090913"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="6"/>
+	<property name="ireport.y" value="10"/>
 	<parameter name="IMAGE_PATH" class="java.lang.String" isForPrompting="false">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
@@ -87,14 +87,14 @@ and ca.fechacapacitacionhasta<=$P{FECHAFIN}]]>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("GOES.jpg")]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement x="319" y="26" width="165" height="20" uuid="caf94bec-5f08-4951-bb40-8e96cdcc5fe0"/>
+				<reportElement x="319" y="24" width="165" height="20" uuid="caf94bec-5f08-4951-bb40-8e96cdcc5fe0"/>
 				<textElement>
 					<font size="10" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Direccion de Recuros Humanos]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="359" y="50" width="84" height="20" uuid="8ad40864-15db-4092-911f-a58a88621a6c"/>
+				<reportElement x="359" y="46" width="84" height="20" uuid="8ad40864-15db-4092-911f-a58a88621a6c"/>
 				<textElement>
 					<font size="10" isBold="true"/>
 				</textElement>
@@ -119,20 +119,20 @@ and ca.fechacapacitacionhasta<=$P{FECHAFIN}]]>
 				<text><![CDATA[Hasta]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="637" y="48" width="80" height="20" uuid="f9ab1773-cdd0-4b9a-836d-789683b76c78"/>
+				<reportElement x="637" y="22" width="80" height="20" uuid="f9ab1773-cdd0-4b9a-836d-789683b76c78"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="661" y="27" width="33" height="20" uuid="024f8444-2a05-4618-8734-3bedca39387b"/>
+				<reportElement x="661" y="5" width="33" height="20" uuid="024f8444-2a05-4618-8734-3bedca39387b"/>
 				<text><![CDATA[Fecha:]]></text>
 			</staticText>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="698" y="25" width="100" height="20" uuid="54c9939e-c77b-4fd3-80fc-b777f8854106"/>
+				<reportElement x="698" y="3" width="100" height="20" uuid="54c9939e-c77b-4fd3-80fc-b777f8854106"/>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="717" y="48" width="40" height="20" uuid="112f8b5f-f2d6-4fe4-939a-4d11c0ca50ab"/>
+				<reportElement x="717" y="22" width="40" height="20" uuid="112f8b5f-f2d6-4fe4-939a-4d11c0ca50ab"/>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<textField>
@@ -151,11 +151,15 @@ and ca.fechacapacitacionhasta<=$P{FECHAFIN}]]>
 				<text><![CDATA[Reporte de Capacitaciones]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="658" y="9" width="51" height="15" uuid="d7e190a3-739c-4bc0-9b17-9256ca0c369b"/>
+				<reportElement x="663" y="38" width="51" height="23" uuid="d7e190a3-739c-4bc0-9b17-9256ca0c369b"/>
 				<text><![CDATA[Usuario:]]></text>
 			</staticText>
+			<staticText>
+				<reportElement x="10" y="35" width="100" height="20" uuid="c93b6750-7c50-4ff9-8bc9-288dc961f125"/>
+				<text><![CDATA[rpt_cap]]></text>
+			</staticText>
 			<textField>
-				<reportElement x="726" y="6" width="100" height="20" uuid="73700692-8fd1-4a20-a32c-43069a4398b4"/>
+				<reportElement x="714" y="36" width="100" height="20" uuid="73700692-8fd1-4a20-a32c-43069a4398b4"/>
 				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
 			</textField>
 		</band>
@@ -208,19 +212,34 @@ and ca.fechacapacitacionhasta<=$P{FECHAFIN}]]>
 				<text><![CDATA[Fecha Desde]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="719" y="0" width="83" height="20" uuid="00152fde-9097-4374-87d7-3d9f121f897d"/>
+				<reportElement x="722" y="0" width="83" height="20" uuid="00152fde-9097-4374-87d7-3d9f121f897d"/>
 				<textElement>
 					<font size="10" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Fecha Hasta]]></text>
 			</staticText>
+			<line>
+				<reportElement x="128" y="2" width="1" height="24" uuid="21b68317-41f6-402f-9f90-a7081a192d70"/>
+			</line>
+			<line>
+				<reportElement x="243" y="2" width="1" height="24" uuid="f8b57054-6274-42c6-b111-e0d47bfdb1f3"/>
+			</line>
+			<line>
+				<reportElement x="369" y="2" width="1" height="24" uuid="ed04f08f-5313-46ca-9b9a-3257dbe33088"/>
+			</line>
+			<line>
+				<reportElement x="479" y="2" width="1" height="24" uuid="e09470c3-5544-401a-8a37-6fcf056b9c2a"/>
+			</line>
+			<line>
+				<reportElement x="608" y="2" width="1" height="24" uuid="274a8edd-e0f3-4f04-a5a3-88b19ca5286d"/>
+			</line>
+			<line>
+				<reportElement x="716" y="2" width="1" height="24" uuid="f6edc88c-8733-44cd-a8db-65ca06692e02"/>
+			</line>
 		</band>
 	</columnHeader>
 	<detail>
 		<band height="25" splitType="Stretch">
-			<rectangle>
-				<reportElement x="4" y="0" width="794" height="25" uuid="bccc8430-1fda-4275-8d4d-aacfeb89cfe2"/>
-			</rectangle>
 			<textField>
 				<reportElement x="12" y="0" width="100" height="20" uuid="1748ebf9-0a45-4a7c-b32a-c7d5e14c7d0f"/>
 				<textElement textAlignment="Center">
@@ -263,11 +282,11 @@ and ca.fechacapacitacionhasta<=$P{FECHAFIN}]]>
 	<columnFooter>
 		<band height="50" splitType="Stretch">
 			<textField evaluationTime="Report">
-				<reportElement x="683" y="14" width="100" height="20" uuid="71862321-0afd-4c0d-b156-dfd0df409d2a"/>
+				<reportElement x="683" y="0" width="100" height="20" uuid="71862321-0afd-4c0d-b156-dfd0df409d2a"/>
 				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" pattern="###0">
-				<reportElement mode="Opaque" x="10" y="19" width="651" height="13" backcolor="#FFFFFF" uuid="8a740730-2662-4df9-afd0-711983618f27"/>
+				<reportElement mode="Opaque" x="10" y="0" width="651" height="13" backcolor="#FFFFFF" uuid="8a740730-2662-4df9-afd0-711983618f27"/>
 				<textElement>
 					<font fontName="Times New Roman" isBold="true" isUnderline="false"/>
 				</textElement>
