--- a/src/main/resources/templates/fragments/formacionacademica/formacionacademicashow.html
+++ b/src/main/resources/templates/fragments/formacionacademica/formacionacademicashow.html
@@ -130,9 +130,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
         
         <div class="col-md-12">
                     <div class="row" align="center">
-                        <button type="button" class="btn btn-primary"> <span class="glyphicon glyphicon-arrow-left"></span>Regresar <a href="#" th:href="@{/empleados/}">.</a></button>
-<!--<button type="submit" class="btn btn-default"><a href="#" th:href="@{/empleados/}">Regresar</a></button>-->
-
+                        <a href="#" th:href="@{/empleados/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>  
                     </div>
                 </div>
   
