--- a/src/main/resources/templates/fragments/puesto/puestoform.html
+++ b/src/main/resources/templates/fragments/puesto/puestoform.html
@@ -306,7 +306,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 
  <div class="col-md-12">
             <div class="row" align="center">
-                <button type="button" class="btn btn-primary"> <span class="glyphicon glyphicon-arrow-left"></span> Regresar<a href="#" th:href="@{/puestos/}">.</a></button>
+                   <a href="#" th:href="@{/puestos/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>  
 <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span>Guardar</button>
 <button type="reset" class="btn btn-secondary"><span class="glyphicon glyphicon-erase"></span>Limpiar</button>
 
